--- a/plugins/create/create.css
+++ b/plugins/create/create.css
@@ -14,3 +14,4 @@ div#tcreate iframe {border-width: 1px; width:170px; height:200px; visibility:hid
 #browse_path {width: 30px;}
 
 #recentTrackers { float: left; width: 130px }
+#deleteFromRecentTrackers {float: left; text-align: left}
