--- a/css/style.css
+++ b/css/style.css
@@ -86,19 +86,24 @@ table#maincont {margin: 5px 0 0 0}
 table#maincont td.uicell {vertical-align: top; padding: 0 }
 
 div#CatList {width: 0px; border: 1px solid #A0A0A0; background-color: #FFFFFF; overflow-y: auto; overflow-x: hidden}
-div#CatList ul {padding: 0; margin: 0; list-style: none; white-space: nowrap}
-div#CatList ul li {padding: 2px 25px; margin: 0; line-height: 14px; font-size: 11px;  cursor: pointer; border: 1px solid #FFFFFF; background-repeat: no-repeat}
+div#CatList ul { margin: 0; padding: 0; list-style: none; white-space: nowrap}
+div#CatList ul li { display: flex; padding: 3px; flex-flow: row nowrap; align-items: center; height: 16px; font-size: 11px;  cursor: pointer; border: 0px solid #FFFFFF; overflow: hidden;}
 div#CatList ul li.sel {background-color: #CFDEEF; border-color: #CFDEEF }
-.-_-_-all-_-_-, #-_-_-all-_-_-, #-_-_-dls-_-_-, #-_-_-com-_-_-, #-_-_-act-_-_-, #-_-_-iac-_-_-, #-_-_-err-_-_- {background-image: url(../images/tstatus.png)}
-.-_-_-all-_-_-, #-_-_-all-_-_- {background-position: 4px -174px;}
-#-_-_-dls-_-_- {background-position: 4px 2px;}
-#-_-_-com-_-_- {background-position: 4px -14px;}
-#-_-_-act-_-_- {background-position: 4px -158px;}
-#-_-_-iac-_-_- {background-position: 4px -30px;}
-#-_-_-err-_-_- {background-position: 4px -94px;}
-span.label-count,span.label-size { background-color: #F0F0F0; padding: 0.1em 0.3em 0.1em 0.3em; margin-left: 0.3em; border-radius: 0.8em; }
-div#CatList ul li.RSS {background-image: url(../images/tstatus.png); background-position: 4px -206px}
-div#CatList ul li.disRSS {background-image: url(../images/tstatus.png); background-position: 4px -190px}
+div#CatList ul li div { margin-right: 0.5em; }
+div#CatList .label-prefix { flex: 0 0 auto; display: flex; flex-flow: row nowrap; opacity: 0.1; font-family: monospace; font-size: 19px; margin-left: -2px; margin-right: 2px; }
+div#CatList .label-prefix div { margin-right: 0px; width: 12px; }
+.label-icon { min-width: 16px; min-height: 16px; background-image: url(../images/tstatus.png); background-repeat: no-repeat; }
+.label-icon img { width: 16px; }
+.-_-_-all-_-_- .label-icon, #-_-_-all-_-_- .label-icon {background-position: 0px -176px;}
+#-_-_-dls-_-_- .label-icon {background-position: 0px 0px;}
+#-_-_-com-_-_- .label-icon {background-position: 0px -16px;}
+#-_-_-act-_-_- .label-icon {background-position: 0px -160px;}
+#-_-_-iac-_-_- .label-icon {background-position: 0px -32px;}
+#-_-_-err-_-_- .label-icon {background-position: 0px -96px;}
+.label-count,.label-size { background-color: #F0F0F0; padding: 0.1em 0.3em 0.1em 0.3em; border-radius: 0.8em; }
+div#CatList ul li.RSS .label-icon { background-position: 0px -208px}
+div#CatList ul li.disRSS .label-icon { background-position: 0px -192px}
+#flabel_cont li:not(.-_-_-all-_-_-) .label-icon { background-position: 0px -32px; }
 
 .stable-icon {background-image: url(../images/tstatus.png); background-repeat: no-repeat}
 .Status_Down {background-position: 0px 0px}
@@ -147,7 +152,7 @@ div.algnright {text-align: right; clear: right}
 .lm li a {color: #000000; padding: 1px 2px}
 .lm li a.focus {background-color: #E0E0E0}
 .ie .lm li a {margin: 0 0 0 -5px; padding: 0}
-.stg_con {float: right; position: relative; width: 450px; height: 500px; margin: 4px; background-color: #FAFAFA}
+.stg_con { display: none; float: right; position: relative; width: 450px; height: 500px; margin: 4px; background-color: #FAFAFA}
 .ie9 .stg_con {position: static}
 fieldset {margin: 4px}
 * > fieldset {border: 1px solid #D0D0D0; -moz-border-radius: 6px; -webkit-border-radius:6px; border-radius:6px;}
@@ -167,7 +172,7 @@ div input, div select {margin: 0 4px; font-size: 11px; padding: 1px 4px}
 legend {color: #000000; font-weight: bold}
 div.indent {padding-left: 16px}
 #st_gl {display: block}
-#st_dl, #st_con, #st_bt, #st_que, #st_sch, #st_ao, #st_dc {display: none}
+#st_que, #st_sch, #st_dc {display: none}
 #st_btns {float: right; position: relative; width: 450px; height: 20px; padding: 3px; text-align: right; }
 #st_btns input {margin-left: 5px}
 a {text-decoration: none}
@@ -274,6 +279,13 @@ div#tadd select { width: 220px }
 .sthdr { font-weight: bold; padding-right: 3px; text-align: right; }
 .stval { padding-right: 3px; overflow: hidden; width: 65px; }
 .speedEdit { width: 320px }
+.decimalDigitEdit input[type=number] { padding: 1px; margin: 0; width: 3em; }
+.decimalDigitEdit tr:first-child th { text-align: center; }
+.decimalDigitEdit tr th { text-align: left; }
+.userInterfaceOptions {  height: 150px; }
+.optionColumn { display: flex; justify-content: space-between; flex-flow: column wrap; }
+.optionColumn input[type=number],.optionColumn select { padding: 1px; margin: 0.1em 0.5em; width: 6em; }
+.optionColumn div { padding-left: 0; }
 .statuscell td { padding: 0 }
 #st_system .sthdr { padding-left: 8px }
 
